Fixed button height not work on Firefox

--- a/site.css
+++ b/site.css
@@ -18,6 +18,8 @@ html, body {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .chart-container {
